<resources>
    <string name="app_name">PokemonClasses</string>
    <string name="login">Iniciar sesion</string>
    <string name="this_is_the_home">Estas en la pantalla de la home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="input_user_data">Ingrese sus datos</string>
    <string name="error_invalid_credentials">Las credenciales son invalidas</string>
    <string name="register">Registrarme</string>
    <string name="pokemon_name">pokemonName</string>
    <string name="logout">Cerrar sesion</string>
    <string name="btn_take_photo">take photo</string>
    <string name="error_user_not_found">Usuario no encontrado</string>
    <string name="profile_picture_saved">La imagen se guardo con exito</string>
    <string name="camera_permission_not_granted">Por favor garantizar permiso de la camara xD</string>
    <string name="error_picture_not_saved">La imagen no se guardo correctamente, por favor vuelva a intentar</string>
    <string name="camera">Camara</string>
    <string name="gallery">Galeria</string>
    <string name="select_picture_source">Eligue de donde quiere sacar la foto\n</string>
    <string name="gallery_permission_not_granted">Por favor garantizar permiso de la galeria</string>
</resources>